--- a/UP04-JS/ejercicio05/prac05.html
+++ b/UP04-JS/ejercicio05/prac05.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practica 04 - Notas</title>
+  <title>Practica 05 - Concatenar</title>
   <script src="prac05.js"></script>
 </head>
 <body>
   <h1 id="texto"></h1>
-  <script>notaExamen()</script>
+  <script>concatenar()</script>
 </body>
 </html>
